@@ -1,3 +1,9 @@
+2011-03-22  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * src/main.c:
+   Make --ft-names list filetypes alphabetically.
+
+
 2011-03-20  Colomban Wendling  <colomban(at)geany(dot)org>
 
  * data/filetypes.*, doc/geany.txt, doc/geany.html, src/callbacks.c,
